# My-portfolio-webapp

./: .dockerignore  .env.example  .env.production  .gitignore  .lighthouserc.js  .snyk  .vercelignore  CHATBOT_DEVELOPMENT_NOTES.md  CI_CD_AUDIT_REPORT.md  CSS_AUDIT_REPORT.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  Dockerfile  EMAIL_CONFIGURATION_SUMMARY.md  EMAIL_SETUP.md  ENVIRONMENT_SECURITY.md  GMAIL_SMTP_SETUP.md  IMAGES_SETUP.md  MANUAL-DEPLOYMENT.md  README.md  SECURITY-SETUP.md  SETUP_COMPLETE.md  SSH-SETUP.md  TESTING_REPORT.md  TEST_REPORT.md  app.js  deploy.sh  docker-compose.yml  ecosystem.config.js  lighthouserc.js  nginx.conf  package-lock.json  package.json  passenger.json  server.js  setup-deployment.sh  setup-ssh-key.ps1  setup-vps-nodejs.sh  (+3 more)
.github/: AUDIT_REPORT.md  CHAT_API_GUIDE.md  DEPLOYMENT_AUDIT_REPORT.md  DEPLOYMENT_SETUP.md  SENIOR_AUDIT_REPORT.md
.husky/: pre-push
apps/service-python/: .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
apps/service-python/app/: __init__.py  main.py
apps/service-python/app/core/: analytics.py  kv.py  rag.py  signing.py
apps/service-python/app/routes/: analytics.py  chat.py  health.py  resume.py
apps/service-python/data/: rag.json
apps/service-python/scripts/: build_rag_index.py
apps/service-python/tests/: test_analytics.py  test_chat_validation.py  test_rag.py
deployment/: github-secrets.md  nginx.conf  production-setup.md
docs/: contact-protection-examples.md  contact-protection-strategy.md  (+1 more)
(+177 files in other folders)
